--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
             <p>東大理系数学のあれこれを徹底的に調べ上げ、まとめページを作ってみました。</p>
 
-            <p>問題の難易度や得点戦略よりも、問題の背景の深掘りや、類題研究等を重視したいと思っています。なので、問題そのものの解答は略解のみ、もしくは省略とさせていただきます。（そもそも他のサイトで少し探せば解説はすぐ見つかるので...。）</p>
+            <p>問題の難易度や得点戦略よりも、問題の背景の深掘りや、類題研究等を重視したいと思っています。なので、問題そのものの解答は略解のみ、もしくは省略とさせていただく事が多いです。（そもそも他のサイトで少し探せば解説はすぐ見つかるので...。）</p>
 
-            <p>このサイトが誰かの役に立ちますように。</p><br>
+            <p>このサイトが誰かの役に立ちますように...</p><br>
 
             <div class="emphbox">
                 <p style="font-size: 0.8em;">未着手の記事は半透明化&無効化してあります。(ちょっと工夫すると見られるものもあったりするんですけどね...)<br>また、難易度は「大学への数学」による評価を参照しています。そのため、「当時の受験生にとっての難易度」であることに注意してください</p>
@@ -154,7 +154,7 @@
                     <td><a href="pages/2020_3.html"><img src="pages/td/スライド33.JPG" alt="2020-3"></a></td>
                     <td><a href="pages/2020_4.html"><img src="pages/td/スライド34.JPG" alt="2020-4"></a></td>
                     <td><a href="pages/2020_5.html"><img src="pages/td/スライド35.JPG" alt="2020-5"></a></td>
-                    <td><a href="pages/2020_6.html"><img src="pages/td/スライド36.JPG" alt="2020-6"></a></td>
+                    <td><a href="pages/2020_6.html"><img class="fi new ans" src="pages/td/スライド36.JPG" alt="2020-6"></a></td>
                 </tr>
                 <tr>
                     <th>2019<br><span style="font-size: 0.5em;">伝説の積分</span></th>
@@ -258,7 +258,7 @@
                 </tr>
 
                 <tr>
-                    <th>2009<br><span style="font-size: 0.5em;">まさかの大問1からD</span></th><td></td>
+                    <th>2009<br><span style="font-size: 0.5em;">なんと第1問から整数</span></th><td></td>
                     <td><a href="pages/2009_1.html"><img src="pages/td/スライド97.JPG" alt="2009-1"></a></td>
                     <td><a href="pages/2009_2.html"><img src="pages/td/スライド98.JPG" alt="2009-2"></a></td>
                     <td><a href="pages/2009_3.html"><img src="pages/td/スライド99.JPG" alt="2009-3"></a></td>
