--- a/pages/2019_1.html
+++ b/pages/2019_1.html
@@ -143,7 +143,7 @@
 
             <p>ここからは完全に予想になってしまうのですが、おそらく本問は次のように作問されたのかなと思います。</p><br>
 
-            <p>(￣д￣)　ボス問級の求積問題を作ろう！<br>↓<br>(/・ω・)/　放物線との距離を考える問題ができた！「管状近傍」という概念も背景におけるし、それなりに東大らしい良問になりそう<br>↓<br>(; ･`д･´)　あれ？ほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>(。-`ω-)　1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>(；一_一)　無駄な分数や符号は消して、あとは知識ゲーになってしまう$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>そして受験生のもとに届く</p>
+            <p>(￣д￣)　ボス問級の求積問題を作ろう！<br>↓<br>(/・ω・)/　放物線との距離を考える問題ができた！「管状近傍」という概念も背景におけるし、それなりに東大らしい良問になりそう<br>↓<br>(; ･`д･´)　あれ？ほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>(。-`ω-)　1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>(；一_一)　無駄な符号は消して、あとは知識ゲーになってしまう$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>そして受験生のもとに届く</p>
 
         
 
@@ -198,7 +198,18 @@
                 <div class="toggle-content">   
                     具体値の保留
                 </div>
-            </div></div>
+            </div>
+          </div>
+
+          <div class="emphbox">$$\int_{\frac56\pi}^{\pi}\frac{2}{(1+\sin x)^2}dx\qquad（北大1968）$$<br><div class="toggle-box" style="text-align: left;">
+                <input type="checkbox" id="2019-1-p3">
+                <label for="2019-1-p3"
+                class="toggle-label">▶ ひとこと</label>
+                <div class="toggle-content">   
+                    極座標の面積とみる面白い解法がある
+                </div>
+            </div>
+          </div>
 
           <div class="emphbox">$$\int_{-1-\sqrt3}^{-1+\sqrt3}(u^2+u+1)\sqrt{2-2u-u^2}du\qquad（{\color{orange}東大2014抜粋}）$$</div>
 
