--- a/pages/2019_5.html
+++ b/pages/2019_5.html
@@ -201,13 +201,30 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 
   // 開閉処理
-  document.getElementById("side-toggle").onclick = () =>
-    document.getElementById("side-nav").classList.add("open");
+const nav = document.getElementById("side-nav");
+const toggle = document.getElementById("side-toggle");
+const close = document.getElementById("side-close");
+const overlay = document.getElementById("side-overlay");
 
-  document.getElementById("side-close").onclick = () =>
-    document.getElementById("side-nav").classList.remove("open");
+toggle.onclick = () => {
+  nav.classList.toggle("open");
+  overlay.classList.toggle("show");
+};
+
+close.onclick = () => {
+  nav.classList.remove("open");
+  overlay.classList.remove("show");
+};
+
+// 背景クリックで閉じる
+overlay.onclick = () => {
+  nav.classList.remove("open");
+  overlay.classList.remove("show");
+};
+
 });
 </script>
+
 <a href="#top" class="go-top-float">▲</a>
 <script>
 const gotop = document.querySelector('.go-top-float');
@@ -220,7 +237,9 @@ window.addEventListener('scroll', () => {
 });
 </script>
 
+
 </body>
+<div id="side-overlay"></div>
 
 
 </html>
