--- a/pages/2011_1.html
+++ b/pages/2011_1.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>2025年東大理系数学第問を徹底解剖！|東大理系数学の解剖|BASE256</title>
+    <title>2011年東大理系数学第1問を徹底解剖！|東大理系数学の解剖|BASE256</title>
     <link rel="stylesheet" href="../css/style.css">
     
     <!--latex読み込み-->
@@ -36,7 +36,7 @@
 </head>
 
 
-<body data-problem="2025-"  id="top">
+<body data-problem="2011-1"  id="top">
 
 
     <!------------------ヘッダ------------------>
@@ -68,25 +68,30 @@
         <a class="gouts" href="../index.html"></a>
         <div class="paragraph">
             
-            <h2><div>東大理系数学 2025-</div></h2>
+            <h2><div>東大理系数学 2011-1</div></h2>
 
             <div class="emphbox">
-                <p></p>
+                <p>座標平面において，点 $P(0,1)$ を中心とする半径 $1$ の円を $C$ とする。$a$ を $0 < a < 1$ を満たす実数とし，直線 $y=a(x+1)$ と $C$ との交点を $Q,\ R$ とする。<br>
+<br>
+(1)　$\triangle PQR$ の面積 $S(a)$ を求めよ。<br>
+<br>
+(2)　$a$ が $0 < a < 1$ の範囲を動くとき，$S(a)$ が最大となる $a$ を求めよ。<br></p>
             </div>
 
         </div>
 
         <div class="paragraph">
 
-            <h2><div>方針、略解</div></h2>
+            <h2><div>解答例</div></h2>
 
-            <p>(1)
+            <p>(1)直線が円から切り取る弦の長さは、半径と点直公式で出すのが最適解。<br>
+              (2)少しややこしい微分。
                 <div class="toggle-box">
-                    <input type="checkbox" id="2025--">
-                    <label for="2025--"
+                    <input type="checkbox" id="2011-1">
+                    <label for="2011-1"
                     class="toggle-label">▶ 解答例(スキャン画像)(タップで拡大)</label>
                     <div class="toggle-content">
-                        <img src="" class="clickable-img" onclick="openImgModal(this.src)">
+                        <img src="figure/20251213_222543.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
             </p>
