--- a/pages/2020_6.html
+++ b/pages/2020_6.html
@@ -164,7 +164,7 @@ $f=xu+2xv+3yu+4yv$<br>
 
             <div class="emphbox">$|z|>\frac{5}{4}$ となるどのような複素数 $z$ に対しても $w=z^2-2z$ は表されない複素数 $w$ 全体の集合を $T$ とする。すなわち，<br>
 <br>
-$T=\{,w\mid w=z^2-2z\ \text{ならば}\ |z|\le\frac{5}{4},\}$<br>
+$T=\{w\mid w=z^2-2z\ \text{ならば}\ |z|\le\frac{5}{4}\}$<br>
 <br>
 とする。このとき，$T$ に属する複素数 $w$ で絶対値 $|w|$ が最大となるような $w$ の値を求めよ。<br><br>（<span style="color: orange;">東大2005</span>）</div><br>
 
