--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
                 <tr>
                     <th>2011<br><span style="font-size: 0.5em;">絶望的計算量の多さ</span></th>
                     <td></td>
-                    <td><a href="pages/2011_1.html"><img src="pages/td/スライド85.JPG" alt="2011-1"></a></td>
-                    <td><a href="pages/2011_2.html"><img src="pages/td/スライド86.JPG" alt="2011-2"></a></td>
-                    <td><a href="pages/2011_3.html"><img src="pages/td/スライド87.JPG" alt="2011-3"></a></td>
-                    <td><a href="pages/2011_4.html"><img src="pages/td/スライド88.JPG" alt="2011-4"></a></td>
-                    <td><a href="pages/2011_5.html"><img src="pages/td/スライド89.JPG" alt="2011-5"></a></td>
-                    <td><a href="pages/2011_6.html"><img src="pages/td/スライド90.JPG" alt="2011-6"></a></td>
+                    <td><a href="pages/2011_1.html"><img class="fi ans" src="pages/td/スライド85.JPG" alt="2011-1"></a></td>
+                    <td><a href="pages/2011_2.html"><img class="" src="pages/td/スライド86.JPG" alt="2011-2"></a></td>
+                    <td><a href="pages/2011_3.html"><img class="fi ans" src="pages/td/スライド87.JPG" alt="2011-3"></a></td>
+                    <td><a href="pages/2011_4.html"><img class="fi ans" src="pages/td/スライド88.JPG" alt="2011-4"></a></td>
+                    <td><a href="pages/2011_5.html"><img class="fi ans" src="pages/td/スライド89.JPG" alt="2011-5"></a></td>
+                    <td><a href="pages/2011_6.html"><img class="fi ans" src="pages/td/スライド90.JPG" alt="2011-6"></a></td>
                 </tr>
                 <tr>
                     <th>2010<br><span style="font-size: 0.5em;">前年度に次ぐLR箱</span></th>
