--- a/pages/2011_2.html
+++ b/pages/2011_2.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>2025年東大理系数学第問を徹底解剖！|東大理系数学の解剖|BASE256</title>
+    <title>2011年東大理系数学第2問を徹底解剖！|東大理系数学の解剖|BASE256</title>
     <link rel="stylesheet" href="../css/style.css">
     
     <!--latex読み込み-->
@@ -36,7 +36,7 @@
 </head>
 
 
-<body data-problem="2025-"  id="top">
+<body data-problem="2011-2"  id="top">
 
 
     <!------------------ヘッダ------------------>
@@ -68,10 +68,21 @@
         <a class="gouts" href="../index.html"></a>
         <div class="paragraph">
             
-            <h2><div>東大理系数学 2025-</div></h2>
+            <h2><div>東大理系数学 2011-2</div></h2>
 
             <div class="emphbox">
-                <p></p>
+                <p>実数 $x$ の小数部分を，$0\le y < 1$ かつ $x-y$ が整数となる実数 $y$ のこととし，これを記号 $\langle x\rangle$ で表す。実数 $a$ に対して，無限数列 ${a_n}$ の各項 $a_n\ (n=1,2,3,\cdots)$ を次のように順次定める。<br>
+<br>
+(i)　$a_1=\langle a\rangle$<br>
+<br>
+(ii)　$a_n\ne0$ のとき，$a_{n+1}=\left\langle\frac{1}{a_n}\right\rangle$<br>
+　　　$a_n=0$ のとき，$a_{n+1}=0$<br>
+<br>
+(1)　$a=\sqrt{2}$ のとき，数列 ${a_n}$ を求めよ。<br>
+<br>
+(2)　任意の自然数 $n$ に対して $a_n=a$ となるような $\frac{1}{3}$ 以上の実数 $a$ をすべて求めよ。<br>
+<br>
+(3)　$a$ が有理数であるとする。$a$ を整数 $p$ と自然数 $q$ を用いて $a=\frac{p}{q}$ と表すとき，$q$ 以上のすべての自然数 $n$ に対して，$a_n=0$ であることを示せ。<br></p>
             </div>
 
         </div>
@@ -80,13 +91,15 @@
 
             <h2><div>方針、略解</div></h2>
 
-            <p>(1)
+            <p>(1)計算。<br>
+              (2)必要条件から攻めるタイプ。$\frac13$以上と言う指定が無かったらものすごく大変な問題になっていたであろう<br>
+              (3)互除法みたいなイメージ？
                 <div class="toggle-box">
-                    <input type="checkbox" id="2025--">
-                    <label for="2025--"
-                    class="toggle-label">▶ 解答例(スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
-                        <img src="" class="clickable-img" onclick="openImgModal(this.src)">
+                    <input type="checkbox" id="2011-2">
+                    <label for="2011-2"
+                    class="toggle-label">▶ 答え</label>
+                    <div class="toggle-content">  
+                        $$$$
                     </div>
                 </div>
             </p>
