--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <td><a href="pages/2014_6.html"><img src="pages/td/スライド72.JPG" alt="2014-6"></a></td>
                 </tr>
                 <tr>
-                    <th>2013<br><span style="font-size: 0.5em;">大問5は謎問題ばかり</span></th>
+                    <th>2013<br><span style="font-size: 0.5em;">大問5は奇問ばかり</span></th>
                     <td></td>
                     <td><a href="pages/2013_1.html"><img src="pages/td/スライド73.JPG" alt="2013-1"></a></td>
                     <td><a href="pages/2013_2.html"><img src="pages/td/スライド74.JPG" alt="2013-2"></a></td>
@@ -341,7 +341,7 @@
                 </tr>
 
                 <tr>
-                    <th>2002</th><td></td>
+                    <th>2002<br><span style="font-size: 0.5em;">前年を受けて易化</span></th><td></td>
                     <td><a href="pages/2002_1.html"><img src="pages/td/スライド139.JPG" alt="2002-1"></a></td>
                     <td><a href="pages/2002_2.html"><img src="pages/td/スライド140.JPG" alt="2002-2"></a></td>
                     <td><a href="pages/2002_3.html"><img src="pages/td/スライド141.JPG" alt="2002-3"></a></td>
