--- a/pages/2011_4.html
+++ b/pages/2011_4.html
@@ -76,7 +76,8 @@
             <h2><div>東大理系数学 2011-4</div></h2>
 
             <div class="emphbox">
-                <p></p>
+                <p>座標平面上の1点 $P\left(\frac12,\ \frac14\right)$ をとる。放物線 $y=x^2$ 上の2点
+$Q(\alpha,\ \alpha^2)$，$R(\beta,\ \beta^2)$ を，3点 $P,\ Q,\ R$ が $QR$ を底辺とする二等辺三角形をなすように動かすとき，$\triangle PQR$ の重心 $G(X,\ Y)$ の軌跡を求めよ。</p>
             </div>
 
         </div>
