--- a/pages/2020_6.html
+++ b/pages/2020_6.html
@@ -129,13 +129,13 @@ $2x^2+y^2 < r^2$<br>
 
             <h2><div>問題の背景</div></h2>
 
-            <p>東大がたまに出す、「論理/同値変形」がらみの問題です。こういう問題が出ると、「そもそも何を言っているのか分からない」となることがありますが、これは高校生に限った話ではなく、大学数学でもある話のようです。というのも、大学以降の数学では、日本語の曖昧性や不完全性を回避するべく、「論理記号」を用いて文章を記述します。<span style="font-size: 0.8em;">（日本語の欠点なんて、「未満の対義語が存在しない」「"逆に"という言葉の意味が広すぎる」など、挙げればキリがありませんからね...）</span>ところが、いきなり$\varepsilon -N$論法なんかに触れる大学生は論理式が解読不能になってしまうみたいです。(※)</p>
-            <p>もしかすると、東大がこういう問題を出すのは、教授が講義するに当たって「せめて必要と十分や、同値性、任意と存在くらいは理解している人を入学させたい」という意図があるのかもしれません。<br>また、実は1950年代の高校数学では論理や写像を必修にしていたという歴史があります。つまり、今の教授はその世代を経験しているため、論理が分からない大学生を憂う気持ちがあるのかもしれないということです。これは私の憶測にすぎないですけどね...。</p><br>
+            <p>東大がたまに出す、「論理/同値変形」がらみの問題です。こういう問題が出ると、「そもそも何を言っているのか分からない」となることがありますが、これは高校生に限った話ではなく、大学数学でもある話のようです。(※)</p>
+            <p>東大がこういう問題を出すのは、「せめて必要と十分や、同値性、任意と存在くらいは理解している人を入学させたい」という目的があるのでしょう。<br>それに、実を言うと今の教授の方々の世代に当たる1950年代では論理や写像を必修にしていたという歴史があるので、こういう問題は、大学側が写像・論理の復活を望んでいることをほのめかしているのかもしれません。（憶測です。無視してください）</p><br>
 
-            <p>そういうこともあって、[解答例]では論理記号と日本語を併用しつつ記述してみました。かえってわかりにくいかもしれませんが、少なくとも誤解は無いと思います。一応記号の説明をしておくと、「$\exists r$」と書いたときは「ある$r$が存在して」と読み、「$\forall \alpha$」と書いたときは「任意の$\alpha$に対し」と読みます。なので、[解答例]における(2)4行目は、「0より大きく1より小さいある実数$r$が存在して、0以上$2\pi$未満の任意の実数$\alpha$に対して、0以上$r$未満の任意の実数$R$に対し、[～（以下略）]」となります。英語同様に後付けで書くので、日本語だと違和感がすごいですね。（重箱の隅をつつくような話をすると、本当は変数の範囲が実数であることも論理式に組み込むべきです）</p><br>
+            <p>そういうこともあって、[解答例]では論理記号と日本語を併用しつつ記述してみました。かえってわかりにくいかもしれませんが、誤解はほぼ無いと思います。一応記号の説明をしておくと、「$\exists r$」と書いたときは「ある$r$が存在して」と読み、「$\forall \alpha$」と書いたときは「任意の$\alpha$に対し」と読みます。なので、[解答例]における(2)4行目は、「0より大きく1より小さいある実数$r$が存在して、0以上$2\pi$未満の任意の実数$\alpha$に対して、0以上$r$未満の任意の実数$R$に対し、[～（以下略）]」となります。英語同様に後付けで文章を書くので、日本語だと違和感がすごいですね。<br>（重箱の隅をつつくような話をすると、変数の範囲が実数であることも論理式に組み込むべきです）</p><br>
 
             <p>このような論理変形のあれこれは注意事項がかなり多く、知らないうちに地雷を踏むこともしばしばあります。私は某予備校T進の回し者ではないですが、青木純二先生の「数学の真髄」（書籍）はこのあたりが非常によくまとめられていて、東大志望者にはオススメです。受験生は知る必要は無いと言う意見も見かけますが、私は、これを学んでこそ数学が得意だと名乗れると思っています。（もちろん高3の夏とかに学び始めるのは、表面上でしか身につかないのでおすすめしない）</p>
-            <p>※完全な余談になりますが、「きいねく」さんがfanboxで論理式に関するマンガを投稿されていたので、興味があったらどうぞ。（<a href="https://keyneqq.fanbox.cc/posts/2047711">https://keyneqq.fanbox.cc/posts/2047711</a>）</p>
+            <p>(※)完全な余談になりますが、「きいねく」さんがfanboxで論理式に関するマンガを投稿されていたので、興味があったらどうぞ。（<a href="https://keyneqq.fanbox.cc/posts/2047711">https://keyneqq.fanbox.cc/posts/2047711</a>）</p>
         </div>
 
         <div class="paragraph">
