--- a/pages/2024_5.html
+++ b/pages/2024_5.html
@@ -102,25 +102,25 @@
 
             <h2><div>動く図解</div></h2>
 
-            <p>Desmosの埋め込みだとラグいかと思ってgifにしたら、画質が死んでしまいました。ご了承ください...。</p>
-            <img src="figure/無題のビデオ ‐ Clipchampで作成.gif" width="400px">
+            <p style="font-size: 0.8em;">(gif画像です。画質はご愛敬)</p>
+            <img src="figure/無題のビデオ ‐ Clipchampで作成 (1).gif" width="200px">
         </div>
 
         <div class="paragraph">
 
             <h2><div>問題の背景</div></h2>
 
-            <p>空間内で図形を回転させるとき、最遠点と最近点を追跡するというのはよく見かける作戦です。今回も定石通り、三角形の切断面内での形を把握できれば一方通行の解答に向かえると思います。なお、場合分けの境界が三角形の頂点とは限らないことには注意が必要です。</p>
+            <p>空間内で図形を回転させるとき、最遠点と最近点を追跡するというのはよくある作戦です。今回も定石通り、三角形の切断面内での形を把握できれば解答にまっすぐ進めると思います。ただし、場合分けの境界が三角形の頂点とは限らないことには注意が必要です。</p>
 
             <p>ここでは、今回の問題をより拡げた視点を考えたいと思います。次の重要事実を確認します。</p>
 
-            <div class="emphbox"><p>①直線上のあらゆる点から、直線を含まない平面に垂線を下ろしたとき、垂線の足は直線を描く。</p><p>②直線の回転体は、円柱、円錐、そして「一葉双曲面」のいずれかになる。（直線が回転軸と垂直な場合を除く）</p></div>
+            <div class="emphbox"><p>①直線上のあらゆる点から、直線を含まないある平面に垂線を下ろしたとき、垂線の足は直線を描く。</p><p>②直線の回転体は、円柱、円錐、そして「一葉双曲面」のいずれかになる。（直線が回転軸と垂直な場合を除く）</p></div>
 
 
 
             <p>①について：<br>証明は容易です。「直線の正射影は直線」と言っていることは同じです。</p>
 
-            <p>②について：<br>一葉双曲面というのは、双曲線の（焦点を通らない対称軸に関する）回転体のことです。イメージとしては、「直線の回転体を考えたとき、$z=t$での回転軸との距離は、$\sqrt{（tの2次式）}$になる」ってことです。画像やリンクから動きを見てみると分かりやすいかと思います。</p>
+            <p>②について：<br>一葉双曲面というのは、双曲線の（焦点を通らない対称軸に関する）回転体のことです。②はつまり、「直線の回転体を考えたとき、$z=t$での回転軸との距離は、$\sqrt{tの2次式}$で表されるよ」って意味です。画像やリンクから動きを見てみると分かりやすいかと思います。</p>
 
             <p>（Desmosリンク：<a href="https://www.desmos.com/3d/3ytz2hfgqm">https://www.desmos.com/3d/3ytz2hfgqm</a>）</p>
 
@@ -144,7 +144,14 @@
 
             <br>
             
-            <div class="emphbox" style="text-align: center;">半径$r$,高さ$h(>r)$の直円錐を，頂点を固定して平面状を図のようにすべることなくころがす。<br>円錐の中心軸が一周してもとの位置に戻るとき，円錐が通過する部分の体積を求めよ。<br><img src="figure/スクリーンショット 2025-12-02 005210.png" width="230px"><br>(東京電機大)</div>
+            <div class="emphbox" style="text-align: center;">半径$r$,高さ$h(>r)$の直円錐を，頂点を固定して平面状を図のようにすべることなくころがす。<br>円錐の中心軸が一周してもとの位置に戻るとき，円錐が通過する部分の体積を求めよ。<br><img src="figure/スクリーンショット 2025-12-02 005210.png" width="230px"><br>(東京電機大)<br><br><div class="toggle-box" style="text-align: left;">
+                <input type="checkbox" id="2024-5-p">
+                <label for="2024-5-p"
+                class="toggle-label">▶ ひとこと</label>
+                <div class="toggle-content">   
+                    こちらは球を帯状に切り出したものと円錐面から成るが、分けて考えるとむしろ計算は重くなる。いつでも初等幾何的計算が賢いとも限らない。
+                </div>
+            </div></div>
 
             <br>
 
@@ -152,7 +159,7 @@
 
             <br>
 
-            <div class="emphbox" style="text-align: center;">座標空間内の2点 $O(0,,0,,0),\ A(2,,0,,0)$ に対し，<br>
+            <div class="emphbox" style="text-align: center;">座標空間内の2点 $O(0,0,0),\ A(2,0,0)$ に対し，<br>
 $\displaystyle 2AP \le OP \le AP + \frac{2\sqrt{5}}{3}$<br>
 をみたす点 $P$ 全体からなる立体を $K$ とする。$K$ の体積を求めよ。<br>(東大模試)<br><br><div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="2025-2-p2">
