--- a/pages/2025_2.html
+++ b/pages/2025_2.html
@@ -226,7 +226,7 @@
                 \end{align}$$
             </div>
 
-            <p>式変形は大変ですが、部分積分することがまさに級数展開の次数を挙げることに相当しているのが分かると思います。</p>
+            <p>式変形は大変ですが、部分積分することがまさに級数展開の次数を挙げることに相当しているのが分かると思います。<br>(というか、そもそも積分という行為が次数を上げるものである以上、これは当たり前でもある。前述の(1)の証明も同様に、積分により近似のオーダーを上げて、自明な不等式から高度な不等式を導出している)</p>
 
             <p>ちなみにこの操作を一般の<span style="font-size: 0.5em;">($n$回微分可能な)</span>関数に対して行うと、まさに「テイラーの定理」が導かれます。これに関しては金沢工業大学さんの解説がありますので、興味のある方はご参照ください：<br><a href="https://w3e.kanazawa-it.ac.jp/math/category/suuretu/suuretu/henkan-tex.cgi?target=/math/category/suuretu/suuretu/taylor-teiri2.html">https://w3e.kanazawa-it.ac.jp/math/category/suuretu/suuretu/henkan-tex.cgi?target=/math/category/suuretu/suuretu/taylor-teiri2.html</a></p>
         </div>
