--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </tr>
 
                 <tr>
-                    <th>2002<br><span style="font-size: 0.5em;">前年を受けて易化</span></th><td></td>
+                    <th>2002<br><span style="font-size: 0.5em;">前年を受けて(?)易化</span></th><td></td>
                     <td><a href="pages/2002_1.html"><img src="pages/td/スライド139.JPG" alt="2002-1"></a></td>
                     <td><a href="pages/2002_2.html"><img src="pages/td/スライド140.JPG" alt="2002-2"></a></td>
                     <td><a href="pages/2002_3.html"><img src="pages/td/スライド141.JPG" alt="2002-3"></a></td>
