軽微な文章公正

--- a/pages/2025_6.html
+++ b/pages/2025_6.html
@@ -152,10 +152,10 @@
             
             <p>$z$がある曲線上をうごくときに$\frac1z$の存在範囲を考える問題【反転変換の問題】は、多くの入試問題で見かけます。東大の過去問(2017,2018など)でも定期的に見かけるので、メジャーな問題は何となく思い出せる程度にしておくと便利かと思います。</p>
 
-            <p>復習がてら、反転以外も色々入れたクイズを置いておきます。いずれも入試では頻出ですので、ぜひ挑戦してみてください。軌跡の名前を即答できると、かなりよく勉強されているかと思います。</p>
+            <p>復習がてら、反転以外も色々入れたクイズを置いておきます。いずれも入試では頻出ですので、ぜひ挑戦してみてください。</p>
 
             <div class="emphbox" style="background-color: rgb(40, 0, 0);">
-                <p style="font-size: 1.2em;font-weight: bold;">軌跡の名前と大体の形だけを求めてください。（余裕のある人は軌跡の方程式も導出してみてね）</p>
+                <p style="font-size: 1.2em;font-weight: bold;">軌跡の名前と概形を求めよ。</p>
                 <div class="problist">
                     
                     <div class="autof">
