--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
     });
     </script>
 
+
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCD123456"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ABCD123456');
+</script>
+
+
 </head>
 
 
