--- a/pages/2004_1.html
+++ b/pages/2004_1.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>2025年東大理系数学第問</title>
+    <title>2004年東大理系数学第1問</title>
     <link rel="stylesheet" href="../css/style.css">
     
     <!--latex読み込み-->
@@ -36,7 +36,7 @@
 </head>
 
 
-<body data-problem="2025-"  id="top">
+<body data-problem="2004-1"  id="top">
 
 
     <!------------------ヘッダ------------------>
@@ -73,34 +73,42 @@
 </div>
         <div class="paragraph">
             
-            <h2><div>東大理系数学 2025-</div></h2>
+            <h2><div>東大理系数学 2004-1</div></h2>
 
             <div class="emphbox">
-                <p></p>
+                <p>$xy$平面の放物線 $y=x^2$ 上の3点 P, Q, R が次の条件をみたしている。<br>
+△PQR は一辺の長さ $a$ の正三角形であり、点 P, Q を通る直線の傾きは $\sqrt{2}$ である。<br>
+このとき、$a$ の値を求めよ。</p>
             </div>
 
         </div>
 
         <div class="paragraph">
 
-            <h2><div>方針、略解</div></h2>
+            <h2><div>解答例</div></h2>
 
-            <p>(1)
+            <p>
                 <div class="toggle-box">
-                    <input type="checkbox" id="2025--">
-                    <label for="2025--"
+                    <input type="checkbox" id="2004-1">
+                    <label for="2004-1"
                     class="toggle-label">▶ 解答例(スキャン画像)(タップで拡大)</label>
                     <div class="toggle-content longanswer">
-                        <img src="" class="clickable-img" onclick="openImgModal(this.src)">
+                        <img src="figure/Screenshot_20251217_073711_Chrome.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
             </p>
+
+            <p>＞$P,Q,R$が本当にこの順に並ぶのかどうかは、もう少し丁寧に書いた方が良かったかもしれません。</p>
+
+            <p>＞また、ベクトルの90°回転が「要素を入れ替えて、片方を-1倍する」ことで実現できるというのもまた、説明が必要かもしれません。</p>
 
         </div>
 
         <div class="paragraph">
 
-            <h2><div>動く図解</div></h2>
+            <h2><div>図解</div></h2>
+
+            <p>今回の問題は問題文中に変数が存在しない($a$は確定値)ので、「動かない図解」になります。</p>
 
             <iframe src="" width="400px" height="400px" style="border: 1px solid #ccc" frameborder=0></iframe>
         </div>
