--- a/pages/2011_2.html
+++ b/pages/2011_2.html
@@ -103,7 +103,7 @@
                     <input type="checkbox" id="2011-2">
                     <label for="2011-2"
                     class="toggle-label">▶ 答え</label>
-                    <div class="toggle-content">  
+                    <div class="toggle-content longanswer">  
                         $$$$
                     </div>
                 </div>
