--- a/pages/2011_5.html
+++ b/pages/2011_5.html
@@ -91,7 +91,7 @@
                     <input type="checkbox" id="2011-5">
                     <label for="2011-5"
                     class="toggle-label">▶ 解答例(スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                           <img src="figure/20251213_222640.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                       
                     </div>
