--- a/pages/2011_6.html
+++ b/pages/2011_6.html
@@ -91,7 +91,7 @@
                     <input type="checkbox" id="2011-6-1">
                     <label for="2011-6-1"
                     class="toggle-label">▶ 解答例[1枚目](スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                           <img src="figure/20251213_222650.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                       
                     </div>
@@ -101,7 +101,7 @@
                     <input type="checkbox" id="2011-6-2">
                     <label for="2011-6-2"
                     class="toggle-label">▶ 解答例[2枚目](スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                           <img src="figure/20251213_222701.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                       
                     </div>
