--- a/pages/2020_6.html
+++ b/pages/2020_6.html
@@ -105,7 +105,7 @@ $2x^2+y^2 < r^2$<br>
                     <input type="checkbox" id="2020-6">
                     <label for="2020-6"
                     class="toggle-label">▶ 解答例(通常画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                         <img src="figure/20251219_173727.jpg" width="400px" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
@@ -161,6 +161,17 @@ $f=xu+2xv+3yu+4yv$<br>
 <br>
 (ii)　適当な $u,\ v$ の値をとれば，$x,\ y$ の値をどのように決めても $f\le k$ となる。<br><br>(出典不明、入試問題)</div><br>
 
+
+
+              <div class="emphbox">実数 $b$ をどのように定めても、 $-1\leqq x\leqq 1$ の範囲の適当な $x$ をとることによって $|ax+b|\geqq1$ が成立するための必要十分条件を求めよ。<br><br><div class="toggle-box">
+                <input type="checkbox" id="2025-2-p1">
+                <label for="2025-2-p1"
+                class="toggle-label">▶ ひとこと</label>
+                <div class="toggle-content longanswer">
+                    <p>以前解いたときの解答例です：</p>   
+                    <blockquote class="twitter-tweet" data-theme="dark"><p lang="ja" dir="ltr">こちらは私が美しいと思った同値変形です<br>（解法自体は若干遠回りだけど...） <a href="https://t.co/Rhio3Ngsbk">pic.twitter.com/Rhio3Ngsbk</a></p>&mdash; しゃにごろ₋ₛₕₐ₂₅₆₋ (@NABLA_DEL) <a href="https://twitter.com/NABLA_DEL/status/1947306816683295186?ref_src=twsrc%5Etfw">July 21, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+            </div></div><br>
 
 
 
