--- a/pages/2011_1.html
+++ b/pages/2011_1.html
@@ -95,7 +95,7 @@
                     <input type="checkbox" id="2011-1">
                     <label for="2011-1"
                     class="toggle-label">▶ 解答例(スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                         <img src="figure/20251213_222543.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
