--- a/pages/2011_3.html
+++ b/pages/2011_3.html
@@ -99,7 +99,7 @@ $f(a)=\displaystyle\int_a^1 \sqrt{\{u'(t)\}^2+\{v'(t)\}^2}dt$<br>
                     <input type="checkbox" id="2011-3-1">
                     <label for="2011-3-1"
                     class="toggle-label">▶ 解答例[1枚目](スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                       <img src="figure/20251213_222612.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
@@ -107,7 +107,7 @@ $f(a)=\displaystyle\int_a^1 \sqrt{\{u'(t)\}^2+\{v'(t)\}^2}dt$<br>
                     <input type="checkbox" id="2011-3-2">
                     <label for="2011-3-2"
                     class="toggle-label">▶ 解答例[2枚目](スキャン画像)(タップで拡大)</label>
-                    <div class="toggle-content">
+                    <div class="toggle-content longanswer">
                       <img src="figure/20251213_222621.jpg" class="clickable-img" onclick="openImgModal(this.src)">
                     </div>
                 </div>
