--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
     </script>
 
 
-<!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ABCD123456"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YC89KNZML0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-ABCD123456');
+
+  gtag('config', 'G-YC89KNZML0');
 </script>
 
 
