--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                 <tr>
                     <th>2025<br><span style="font-size: 0.5em;">新科目「情報」</span></th>
                     <td><a href="pages/gaikan2025.html">2025概観<img class="fi"></a></td>
-                    <td><a href="pages/2025_1.html"><img class="fi new" src="pages/td/スライド1.JPG" alt="2025-1"></a></td>
-                    <td><a href="pages/2025_2.html"><img class="fi new" src="pages/td/スライド2.JPG" alt="2025-2"></a></td>
-                    <td><a href="pages/2025_3.html"><img class="fi new" src="pages/td/スライド3.JPG" alt="2025-3"></a></td>
-                    <td><a href="pages/2025_4.html"><img class="fi new" src="pages/td/スライド4.JPG" alt="2025-4"></a></td>
-                    <td><a href="pages/2025_5.html"><img class="fi new ans" src="pages/td/スライド5.JPG" alt="2025-5"></a></td>
-                    <td><a href="pages/2025_6.html"><img class="fi new" src="pages/td/スライド6.JPG" alt="2025-6"></a></td>
+                    <td><a href="pages/2025_1.html"><img class="fi" src="pages/td/スライド1.JPG" alt="2025-1"></a></td>
+                    <td><a href="pages/2025_2.html"><img class="fi" src="pages/td/スライド2.JPG" alt="2025-2"></a></td>
+                    <td><a href="pages/2025_3.html"><img class="fi" src="pages/td/スライド3.JPG" alt="2025-3"></a></td>
+                    <td><a href="pages/2025_4.html"><img class="fi" src="pages/td/スライド4.JPG" alt="2025-4"></a></td>
+                    <td><a href="pages/2025_5.html"><img class="fi ans" src="pages/td/スライド5.JPG" alt="2025-5"></a></td>
+                    <td><a href="pages/2025_6.html"><img class="fi" src="pages/td/スライド6.JPG" alt="2025-6"></a></td>
                 </tr>
                 <tr>
                     <th>2024<br><span style="font-size: 0.5em;">計算重め</span></th>
@@ -334,7 +334,7 @@
 
                 <tr>
                     <th>2004<br><span style="font-size: 0.5em;">積分&小数計算</span></th><td></td>
-                    <td><a href="pages/2004_1.html"><img src="pages/td/スライド127.JPG" alt="2004-1"></a></td>
+                    <td><a href="pages/2004_1.html"><img class="fi new ans" src="pages/td/スライド127.JPG" alt="2004-1"></a></td>
                     <td><a href="pages/2004_2.html"><img src="pages/td/スライド128.JPG" alt="2004-2"></a></td>
                     <td><a href="pages/2004_3.html"><img src="pages/td/スライド129.JPG" alt="2004-3"></a></td>
                     <td><a href="pages/2004_4.html"><img src="pages/td/スライド130.JPG" alt="2004-4"></a></td>
