--- a/pages/2020_5.html
+++ b/pages/2020_5.html
@@ -121,11 +121,18 @@
 <br>
 $x^2 + y^2 - 2tx - 4ty + 4t^2 = 0$<br>
 <br>
-で表される円を $C_t$ とする。$t$ がどのような値でも $C_t$ と接する直線の方程式を求めよ。（出典不明、入試問題）</div><br>
+で表される円を $C_t$ とする。$t$ がどのような値でも $C_t$ と接する直線の方程式を求めよ。<br><br>（日本女子大2015）<br><br><div class="toggle-box" style="text-align: left;">
+                <input type="checkbox" id="2020-5-p1">
+                <label for="2020-5-p1"
+                class="toggle-label">▶ ひとこと&答え</label>
+                <div class="toggle-content">   
+                    点と直線の距離 $$答え：x=0,y=\frac34x$$
+                </div>
+            </div></div><br>
 
 
 
-            <div class="emphbox">$0 \le \alpha \le \frac{\pi}{3}$ の範囲で実数 $\alpha$ を動かすとき，$(\tan\alpha,,0)$ を中心に持つ半径 $2 - \frac{1}{\cos\alpha}$ の円周が通過する領域の面積を求めてください。<br>
+            <div class="emphbox">$0 \le \alpha \le \frac{\pi}{3}$ の範囲で実数 $\alpha$ を動かすとき，$(\tan\alpha,0)$ を中心に持つ半径 $2 - \frac{1}{\cos\alpha}$ の円周が通過する領域の面積を求めてください。<br>
 ただし，求める答えは，整数 $a, b, c$ を用いて，$\frac{a}{b}\pi - \sqrt{c}$ と表せるので（ただし $a, b$ は互いに素），$a + b + c$ の値を解答してください。<br><br>（OMCB012(H) writer:MARTH）<br>(リンク：<a href="https://onlinemathcontest.com/contests/omcb012/tasks/4575">https://onlinemathcontest.com/contests/omcb012/tasks/4575</a>)</div><br>
 
         </div>
