--- a/pages/2024_5.html
+++ b/pages/2024_5.html
@@ -124,7 +124,7 @@
 
             <p>（Desmosリンク：<a href="https://www.desmos.com/3d/3ytz2hfgqm">https://www.desmos.com/3d/3ytz2hfgqm</a>）</p>
 
-            <p><img src="figure/スクリーンショット 2025-12-09 220730.png" width="200px">　　<img src="figure/スクリーンショット 2025-12-09 220849.png" width="200px">　　<img src="figure/スクリーンショット 2025-12-09 220925.png" width="200px">　　<img src="figure/スクリーンショット 2025-12-09 220956.png" width="200px"></p>
+            <p><img src="figure/20245.jpg" style="max-width: 100%;width: 400px;">
             
             <p>以上二つを踏まえて今回の問題を眺めてみましょう。最遠点と最近点は、三角形の端または回転軸上の$x=t$の点から下ろした垂線の足なので、①より線分をつなげたものになります。すると②よりこれの回転体の体積を求めるには、$\sqrt{（tの2次式）}$の2乗に$\pi$を書けたものを積分していく(円環の面積計算)ことになるので、多項式の積分で済むことが一目瞭然です。</p>
         </div>
@@ -144,7 +144,7 @@
 
             <br>
             
-            <div class="emphbox" style="text-align: center;">半径$r$,高さ$h(>r)$の直円錐を，頂点を固定して平面状を図のようにすべることなくころがす。<br>円錐の中心軸が一周してもとの位置に戻るとき，円錐が通過する部分の体積を求めよ。<br><img src="figure/スクリーンショット 2025-12-02 005210.png" width="230px"><br>(東京電機大)<br><br><div class="toggle-box" style="text-align: left;">
+            <div class="emphbox" style="text-align: center;">半径$r$,高さ$h(>r)$の直円錐を，頂点を固定して平面状を図のようにすべることなくころがす。<br>円錐の中心軸が一周してもとの位置に戻るとき，円錐が通過する部分の体積を求めよ。<br><img src="figure/スクリーンショット 2025-12-26 182739.png" width="230px"><br>(東京電機大)<br><br><div class="toggle-box" style="text-align: left;">
                 <input type="checkbox" id="2024-5-p">
                 <label for="2024-5-p"
                 class="toggle-label">▶ ひとこと</label>
