--- a/pages/2019_1.html
+++ b/pages/2019_1.html
@@ -189,9 +189,9 @@
 
             <div class="emphbox" style="background-color: rgba(103, 0, 0, 0.685);">$S$の計算式(符号除く):$$\int_0^1\left(x^2{\boldsymbol{\color{yellow}-}}\frac{\boldsymbol{\color{yellow}2}}{\sqrt{1+x^2}}\right)\left(1+\frac{\boldsymbol{\color{yellow}1}}{(1+x^2)\sqrt{1+x^2}}\right)dx$$</div>
 
-            <p>ここからは完全に予想になってしまうのですが、おそらく本問は次のように作問されたのかなと思います。</p><br>
+            <p>何が言いたいのかというと、本問の式は、見た目が非常に$\int y \frac{dx}{dt}dt$に似ているので、作問時点では求積問題だったのでは？ということです。ここからは完全に予想になってしまうのですが、おそらく本問は次のように作問されたのかなと思います。</p><br>
 
-            <p>ボス問級の求積問題を作ろう！<br>↓<br>放物線との距離を考える問題ができた！「管状近傍」という概念も背景におけるし、それなりに東大らしい良問になりそう<br>↓<br>と思ったらほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>無駄な符号は消して、あとは知識勝負になりがちな$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>結局大問1として出題される</p>
+            <p>ボス問級の求積問題を作ろう！<br>↓<br>放物線との距離を考える問題ができた！それなりに東大らしい良問になりそう<br>↓<br>と思ったらほかの問題で後半4,5,6問が埋まってしまった...<br>↓<br>1番級のものに改題するために、計算の部分だけ出そうかな<br>↓<br>無駄な符号は消して、あとは知識勝負になりがちな$\int\frac{1}{\sqrt{1+x^2}}dx$も、普通のtan置換に変えておくか...<br>↓<br>結局大問1として出題される</p>
 
         
 
@@ -258,6 +258,8 @@
                 </div>
             </div>
           </div>
+          
+          <div class="emphbox">$$\int_{0}^{\frac{\pi}{4}}\log(1+\tan x)dx\qquad（京都教育大2009）$$</div>
 
           <div class="emphbox">$$\int_{-1-\sqrt3}^{-1+\sqrt3}(u^2+u+1)\sqrt{2-2u-u^2}du\qquad（{\color{orange}東大2014抜粋}）$$</div>
 
