--- a/pages/2019_5.html
+++ b/pages/2019_5.html
@@ -127,10 +127,10 @@
             <h2><div>類題紹介</div></h2>
 
             <div class="emphbox">
-                　$f(x)=x^2+4n\cos x+1-4n\ (n=1,2,3,\dots)$ として，以下の問に答えよ。<br>
-(1)　各 $n$ に対して, $f(x)=0,\ 0 < x < \frac{\pi}{2}$ をみたす実数 $x$ がただ1つずつあることを示せ。<br>
-(2)　(1) の条件をみたす $x$ を $x_n$ とするとき，$\lim_{n\to\infty} x_n = 0$ であることを示せ。<br>
-(3)　極限値 $\lim_{n\to\infty} n x_n^2$ を求めよ。<br>
+                　$f(x)=x^2+4n\cos x+1-4n\ (n=1,2,3,\dots)$ として，以下の問に答えよ。<br><br>
+(1)　各 $n$ に対して, $f(x)=0,\ 0 < x < \frac{\pi}{2}$ をみたす実数 $x$ がただ1つずつあることを示せ。<br><br>
+(2)　(1) の条件をみたす $x$ を $x_n$ とするとき，$\lim_{n\to\infty} x_n = 0$ であることを示せ。<br><br>
+(3)　極限値 $\lim_{n\to\infty} n x_n^2$ を求めよ。<br><br>
 （防衛医科大）
             </div>
             <br>
