--- a/pages/2025_6.html
+++ b/pages/2025_6.html
@@ -215,7 +215,7 @@
 
             <h2><div>類題紹介</div></h2>
 
-            <div class="emphbox">方程式 $x^3+1=0$ の解のうち，虚部が正であるものを $\alpha$ とする。複素数平面上の 3 点 $A(\alpha)$，$B(-1)$，$C(\overline{\alpha})$ を頂点とする $\triangle ABC$ を考える。$\triangle ABC$ の周上の点 $P(z)$ に対して，原点 $O$ を端点とし，$P(z)$ を通過する線上に $|w|=\frac{1}{|z|}$ をみたす点 $Q(w)$ をとるとき，その関係を考えよ。ただし，複素数 $z$ は共役な複素数で表し，複素数平面上で複素数 $z$ を表す点を $G(\gamma)$ と書く。<br>
+            <div class="emphbox">方程式 $x^3+1=0$ の解のうち，虚部が正であるものを $\alpha$ とする。複素数平面上の 3 点 $A(\alpha)$，$B(-1)$，$C(\overline{\alpha})$ を頂点とする $\triangle ABC$ を考える。$\triangle ABC$ の周上の点 $P(z)$ に対して，原点 $O$ を端点とし，$P(z)$ を通過する線上に $|w|=\frac{1}{|z|}$ をみたす点 $Q(w)$ をとるとき，次の問に答えよ。<br>
 <br>
 (1)　$w=\frac{1}{\overline{z}}$ となることを示せ。<br>
 <br>
