--- a/pages/2025_2.html
+++ b/pages/2025_2.html
@@ -249,7 +249,14 @@
 
             <p>いくつかは今回と同様の変形が刺さります。（少し工夫を要するものや、そもそも刺さらないやつもあるかも...）</p>
 
-            <div class="emphbox">$$\lim_{a\rightarrow0}\frac{1}{a^2}\Bigg(\frac12-\int_0^1x\cos(ax)dx\Bigg)　　（東大模試抜粋）$$</div>
+            <div class="emphbox">$$\lim_{a\rightarrow0}\frac{1}{a^2}\Bigg(\frac12-\int_0^1x\cos(ax)dx\Bigg)　　（東大模試抜粋）$$<br><br><div class="toggle-box">
+                <input type="checkbox" id="2025-2-p0">
+                <label for="2025-2-p0"
+                class="toggle-label">▶ ひとこと</label>
+                <div class="toggle-content">   
+                    部分積分をしない解法を見つけた方がいましたので引用します：<br><iframe  width="224" height="126" src="https://www.youtube.com/embed/1ODbarhe5RM?si=lIPZ6SqgEC0gfNhN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div></div>
 
 
             <div class="emphbox">$$\lim_{n\rightarrow\infty}\int_0^{\frac{\pi}{2}}\frac{\sin^2nx}{1+x}dx　　（東工大1999）$$</div>
@@ -258,7 +265,7 @@
             <div class="emphbox">$$\lim_{n\rightarrow\infty}n\int_1^e(\log x)^ndx　　（京大1994　改）$$</div>
 
 
-            <div class="emphbox">$$\lim_{n\rightarrow\infty}n\int_0^1x^n\cos(\pi x)dx　　（京大模試抜粋）$$</div>
+            <div class="emphbox">$$\lim_{n\rightarrow\infty}(n+1)\int_0^1x^n\cos(\pi x)dx　　（京大2000抜粋）$$</div>
 
 
             <div class="emphbox">$$\lim_{n\rightarrow\infty}n\int_0^1x^n\sin\Big(\frac{\pi}{3}x^n\Big)dx　　（東北大AO2019抜粋）$$</div>
