--- a/pages/2004_1.html
+++ b/pages/2004_1.html
@@ -119,7 +119,7 @@
 
             <h2><div>図解</div></h2>
 
-            <p>今回の問題は問題文中に変数が存在しない($a$は確定値)ので、「動かない図解」になります。</p>
+            <p>$P$を動かして、$R$が放物線上に来るようにする...というイメージです</p>
 
             <iframe src="https://www.desmos.com/calculator/kbxgxfcmle?embed" width="400px" height="400px" style="border: 1px solid #ccc" frameborder=0></iframe>
         </div>
